Added an h1 to special.html

--- a/special.html
+++ b/special.html
@@ -6,6 +6,6 @@
   <title>This is a special (very) site</title>
 </head>
 <body>
-
+<h1>Hi this is an incredibly special site I hope you're amazed</h1>
 </body>
 </html>
